# watermark-cli

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.cargo/: config.toml
.github/workflows/: action.yml
src/: cli.rs  gpu.rs  main.rs  pdf.rs
