[package]
name = "watermark-cli"
description = "A command-line tool for adding watermarks to images and PDFs with support for batch processing and various watermark patterns"
version = "1.1.1"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/chianti-ga/watermark-cli"
exclude = [
    "exemples/*"
]
authors = ["Chianti GALLY"]
keywords = ["watermark", "images", "pdf", "cli", "identity-theft"]
categories = ["command-line-utilities"]

[dependencies]
ab_glyph = "0.2.29"
clap = { version = "4.5.38", features = ["default", "unicode", "derive", "usage"] }
imageproc = { version = "0.25.0", features = ["default", "rayon"] }
rayon = "1.10.0"
log = "0.4.27"
indicatif = "0.17.8"
colored = "3.0.0"
printpdf = { version = "0.8.2", features = ["default", "rayon", "jpeg", "kuchiki"] }

[profile.dev]
opt-level = 1
