[package]
name = "watermark-cli"
description = "A command-line tool for adding watermarks to images with support for batch processing and various watermark patterns"
version = "1.2.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/chianti-ga/watermark-cli"
exclude = [
    "exemples/*"
]
authors = ["Chianti GALLY"]
keywords = ["watermark", "images", "pdf", "cli", "identity-theft"]
categories = ["command-line-utilities"]

[features]
default = ["auto-update"]
auto-update = []

[dependencies]
ab_glyph = "0.2.29"
clap = { version = "4.6.1", features = ["default", "unicode", "derive", "usage"] }
imageproc = { version = "0.26.1", features = ["default", "rayon"] }
rayon = "1.12.0"
log = "0.4.27"
indicatif = "0.18.4"
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
hayro = { version = "0.6.0", features = ["default", "embed-fonts"] }
image = "0.25.10"

[profile.dev]
opt-level = 1
